Add get endpoint
